--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: TomTom Developer Cheat Sheet
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>{{ page.title }}</title>
-	<link rel="stylesheet" href="assets/styles.css">
+	assets/styles.css
 	<style>
 		:root {
 				{
@@ -53,14 +53,12 @@ title: TomTom Developer Cheat Sheet
 		</section>
 
 		<section class="honeycomb" aria-label="Cheat sheet categories">
-			{% comment %}
-			並び順：order優先。orderがない行は末尾に回ります
-			{% endcomment %}
-			{% assign items = site.data.links | sort: 'order' %}
+			{% comment %} CSVを読み込み（order→titleで並び替え） {% endcomment %}
+			{% assign items = site.data.links | sort: "order" | sort: "title" %}
 			{% for item in items %}
-			<a class="hex {{ item.category }}" href="{{ item.url }}" target="_blank" rel="noopener">
-				<strong>{{ item.title }}</strong>
-				<small>{{ item.subtitle }}</small>
+			{{ item.url }}
+			<strong>{{ item.title }}</strong>
+			<small>{{ item.subtitle }}</small>
 			</a>
 			{% endfor %}
 		</section>
