--- a/index.html
+++ b/index.html
@@ -10,34 +10,7 @@ title: TomTom Developer Cheat Sheet
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>{{ page.title }}</title>
-	<link rel="stylesheet" href="assets/styles.css">
-	<style>
-		/* Liquidでカテゴリ色をCSS変数として出力（1行1ルール） */
-		:root {
-				{
-				% for key,
-				cat in site.data.categories %
-			}
-
-			--c- {
-					{
-					key
-				}
-			}
-
-			: {
-					{
-					cat.color
-				}
-			}
-
-			;
-
-				{
-				% endfor %
-			}
-		}
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -57,9 +30,9 @@ title: TomTom Developer Cheat Sheet
 			{% comment %} 並び順：order優先 {% endcomment %}
 			{% assign items = site.data.links | sort: 'order' %}
 			{% for item in items %}
-			<a class="hex {{ item.category }}" href="{{ item.url }}" target="_blank" rel="noopener">
-				<strong>{{ item.title }}</strong>
-				<small>{{ item.subtitle }}</small>
+			{{ item.url }}
+			<strong>{{ item.title }}</strong>
+			<small>{{ item.subtitle }}</small>
 			</a>
 			{% endfor %}
 		</section>
