--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: TomTom Developer Cheat Sheet
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>{{ page.title }}</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="assets/styles.css" />
 </head>
 
 <body>
@@ -21,18 +21,19 @@ title: TomTom Developer Cheat Sheet
 
 	<main>
 		<section class="legend">
-			{% for key,cat in site.data.categories %}
+			{% for pair in site.data.categories %}
+			{% assign key = pair[0] %}
+			{% assign cat = pair[1] %}
 			<span class="pill {{ key }}">{{ cat.label }}</span>
 			{% endfor %}
 		</section>
 
 		<section class="honeycomb" aria-label="Cheat sheet categories">
-			{% comment %} 並び順：order優先 {% endcomment %}
 			{% assign items = site.data.links | sort: 'order' %}
 			{% for item in items %}
-			{{ item.url }}
-			<strong>{{ item.title }}</strong>
-			<small>{{ item.subtitle }}</small>
+			<a class="hex {{ item.category }}" href="{{ item.url }}" target="_blank" rel="noopener">
+				<strong>{{ item.title }}</strong>
+				<small>{{ item.subtitle }}</small>
 			</a>
 			{% endfor %}
 		</section>
@@ -44,3 +45,4 @@ title: TomTom Developer Cheat Sheet
 </body>
 
 </html>
+``
