--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: TomTom Developer Cheat Sheet
 <body>
 	<header class="site-header">
 		<h1>{{ page.title }}</h1>
-		<p class="tagline">よく使うAPIとドキュメントの最短リンク集</p>
+		<p class="tagline">Quick links to frequently used APIs and documentation</p>
 	</header>
 
 	<main>
@@ -41,6 +41,8 @@ title: TomTom Developer Cheat Sheet
 
 	<footer class="site-footer">
 		<p>© Ash Nagao — GitHub Pages hosted.</p>
+		<p>This site is independently operated and is not affiliated with or endorsed by TomTom. It does not represent official
+		TomTom documentation.</p>
 	</footer>
 </body>
 
