--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ title: TomTom Developer Cheat Sheet
 
 	<footer class="site-footer">
 		<p>© Ash Nagao — GitHub Pages hosted.</p>
-		<p>This site is independently operated and is not affiliated with or endorsed by TomTom. It does not represent official
+		<p>This site is independently operated and is not an official TomTom website
 		TomTom documentation.</p>
 	</footer>
 </body>
