--- a/index.html
+++ b/index.html
@@ -28,15 +28,36 @@ title: TomTom Developer Cheat Sheet
 			{% endfor %}
 		</section>
 
-		<section class="honeycomb" aria-label="Cheat sheet categories">
-			{% assign items = site.data.links | sort: 'order' %}
+		<section class="honeycomb-list" aria-label="Cheat sheet categories">
+			{%- comment -%}
+			カテゴリ境界を検出して、カテゴリが変わるたびに新しい .honeycomb セクションを開始。
+			まず category でソートして境界を揃える。各カテゴリ内の order は後で調整する場合は
+			categories のループ版に変更してください（この版は最小変更優先）。
+			{%- endcomment -%}
+			{% assign items = site.data.links | sort: 'category' %}
+			{% assign current = '' %}
 			{% for item in items %}
-			<a class="hex {{ item.category }}" href="{{ item.url }}" target="_blank" rel="noopener">
-				<strong>{{ item.title }}</strong>
-				<small>{{ item.subtitle }}</small>
-			</a>
-			{% endfor %}
+			{% assign cat = item.category %}
+
+			{%- if cat != current -%}
+			{%- if forloop.index != 1 -%}
 		</section>
+		{%- endif -%}
+		<section class="honeycomb group {{ cat }}" aria-label="{{ cat }}">
+			{% assign current = cat %}
+			{%- endif -%}
+
+			{{ item.url }}
+			<strong>{{ item.title }}</strong>
+			<small>{{ item.subtitle }}</small>
+			</a>
+
+			{%- if forloop.last -%}
+		</section>
+		{%- endif -%}
+		{% endfor %}
+		</section>
+
 	</main>
 
 	<footer class="site-footer">
